--- a/pseudocode.ipynb
+++ b/pseudocode.ipynb
@@ -136,7 +136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 23,
    "id": "e737dddd-092f-4dab-a932-1fee9d39f73d",
    "metadata": {},
    "outputs": [
@@ -149,6 +149,17 @@
      },
      "metadata": {},
      "output_type": "display_data"
+    },
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'ipywidgets' has no attribute 'Floatslider'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[23], line 24\u001b[0m\n\u001b[0;32m     21\u001b[0m plt\u001b[38;5;241m.\u001b[39mtitle(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mPotential Energy\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     22\u001b[0m plt\u001b[38;5;241m.\u001b[39mshow()\n\u001b[1;32m---> 24\u001b[0m D_slider \u001b[38;5;241m=\u001b[39m \u001b[43mwidgets\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mFloatslider\u001b[49m(\n\u001b[0;32m     25\u001b[0m     value \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m,\n\u001b[0;32m     26\u001b[0m     \u001b[38;5;28mmin\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m10\u001b[39m,\n\u001b[0;32m     27\u001b[0m     \u001b[38;5;28mmax\u001b[39m \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m10\u001b[39m,\n\u001b[0;32m     28\u001b[0m     step \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0.1\u001b[39m,\n\u001b[0;32m     29\u001b[0m     description \u001b[38;5;241m=\u001b[39m \u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD:\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m     31\u001b[0m result\u001b[38;5;241m.\u001b[39mlabel \u001b[38;5;241m=\u001b[39m widgets\u001b[38;5;241m.\u001b[39mLabel()\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'ipywidgets' has no attribute 'Floatslider'"
+     ]
     }
    ],
    "source": [
@@ -157,6 +168,7 @@
     "import sympy as sp\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
+    "from ipywidgets import interact, FloatSlider, IntSlider\n",
     "\n",
     "U, K, F, D, P = sp.symbols('U K F D P')\n",
     "\n",
