basic outline done; need to clean up and add some specificity

--- a/pseudocode.ipynb
+++ b/pseudocode.ipynb
@@ -141,16 +141,27 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import \n",
-    "#Define constants (K, D, phi, U)\n",
-    "#define function U\n",
+    "#import packages: \n",
     "\n",
-    "#find roots/equilibrium points:\n",
+    "#Define constants (K=K, D=D, phi..., U...)\n",
+    "#Define function U\n",
+    "\n",
+    "#Plot U for examination purposes\n",
+    "\n",
+    "#1st derivative of U:\n",
     "    # (-)derivative(U) = F_Q\n",
-    "    #Defint F_Q = 0\n",
+    "    #Define F_Q = 0\n",
     "    #Return Q value(s)\n",
     "\n",
-    "#Solve and simplify U(Q_equilibrium) (may be multiple pts)\n"
+    "#2nd derivative of U; equilibrium pts\n",
+    "    #define second derivative of U\n",
+    "    #return d^2/dU^2 = 0 = K_eff\n",
+    "\n",
+    "#angular frequency omega = \\sqrt(K_eff/m)\n",
+    "\n",
+    "#Plot U vs omega\n",
+    "#\n",
+    "\n"
    ]
   }
  ],
