working on expanded pseudocode

--- a/pseudocode.ipynb
+++ b/pseudocode.ipynb
@@ -141,26 +141,45 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#import packages: \n",
+    "#Pseudocode:\n",
     "\n",
-    "#Define constants (K=K, D=D, phi..., U...)\n",
+    "#Import libraries\n",
+    "#Define constants\n",
+    "#Get equation of motion\n",
+    "#Solve for dynamics\n",
+    "#Extract Frequency\n",
+    "#Plot frequency vs. Q_0\n",
+    "\n",
+    "\n",
+    "#Expanded:\n",
+    "\n",
+    "#Import libraries: numpy, matplotlib, scipy, sympi, ipywidgets\n",
+    "\n",
+    "\n",
+    "#Define constants (K=K, D=D, phi= phi, Q=Q, omega= omega)\n",
     "#Define function U\n",
+    "#Plot U vs Q\n",
+    "#Add widget for varying values of D\n",
     "\n",
-    "#Plot U for examination purposes\n",
     "\n",
+    "#Get equation of motion:\n",
     "#1st derivative of U:\n",
     "    # (-)derivative(U) = F_Q\n",
     "    #Define F_Q = 0\n",
     "    #Return Q value(s)\n",
     "\n",
+    "#Solve for dynamics\n",
     "#2nd derivative of U; equilibrium pts\n",
     "    #define second derivative of U\n",
     "    #return d^2/dU^2 = 0 = K_eff\n",
     "\n",
-    "#angular frequency omega = \\sqrt(K_eff/m)\n",
+    "#Extract Frequency:\n",
+    "#Angular frequency omega = \\sqrt(K_eff/m)\n",
     "\n",
-    "#Plot U vs omega\n",
-    "#\n",
+    "#Plot frequency vs. Q_0\n",
+    "\n",
+    "#Plot U vs found omega\n",
+    "#Add widget for D to examine behavior\n",
     "\n"
    ]
   }
