--- a/pseudocode.ipynb
+++ b/pseudocode.ipynb
@@ -153,10 +153,11 @@
     "\n",
     "#Expanded:\n",
     "\n",
-    "#Import libraries: numpy, matplotlib, scipy, sympi, ipywidgets\n",
+    "#Import libraries:\n",
+    "#numpy, matplotlib, scipy, sympi, ipywidgets\n",
     "\n",
     "\n",
-    "#Define constants (K=K, D=D, phi= phi, Q=Q, omega= omega)\n",
+    "#Define constants (K, D, phi, Q, omega)\n",
     "#Define function U\n",
     "#Plot U vs Q\n",
     "#Add widget for varying values of D\n",
@@ -177,8 +178,6 @@
     "#Angular frequency omega = \\sqrt(K_eff/m)\n",
     "\n",
     "#Plot frequency vs. Q_0\n",
-    "\n",
-    "#Plot U vs found omega\n",
     "#Add widget for D to examine behavior\n",
     "\n"
    ]
